[package]
name = "passing-high-level-data-types"
version = "0.1.0"
authors = ["Pranav Joglekar <pranav2000joglekar@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
